# elfrun

./: .gitignore  CMakeLists.txt  README.md  ehdr.h  linkable_format.cpp  linkable_format.h  loader.cpp  loader_script.ld
tests/: main.c
